# solana-kyc-compliance-sdk

./: API_Gateway_Products.yaml  CODEOWNERS  Cargo.toml  Emoji‑Based_Badges.md   ExtraAccountMetaList PDA.ts  FUNDING.yml  FUNDING_BANNER.md  GITDIGITALUIKIT.md  Product_Release.md  README.md  SPONSOR.md  SPONSORS.md  SPONSORSHIPAUTOMATIONPIPELINE.md  SPONSORSHIPCRMDASHBOARD.md  SPONSORSHIPDATAWAREHOUSE_SCHEMA.md  SPONSORSHIPDIPLOMACYPROTOCOL.md  SPONSORSHIPECONOMICMODEL.md  SPONSORSHIPETHICSFRAMEWORK.md  SPONSORSHIPFORECASTINGMODEL.md  SPONSORSHIPHEROSJOURNEY.md  SPONSORSHIPLANDINGPAGE.md  SPONSORSHIPLIFECYCLEMAP.md  SPONSORSHIPMETAPHYSICSFRAMEWORK.md  SPONSORSHIPMICROSITELAYOUT.md  SPONSORSHIPMULTIVERSEINTEGRATION.md  SPONSORSHIPPITCHDECK.md  SPONSORSHIPREVENUEMODEL.md  SPONSORSHIPRISKANDRESILIENCEPLAN.md  SPONSORSHIP_POLICY.md  SPONSORWELCOMEPACKET.md  SUPPORTERANTHEMLYRICAL.md  SUPPORTERBADGEMINTING_SYSTEM.md  SUPPORTERCULTURALCOUNCIL.md  SUPPORTERDREAMSYMBOL_LEXICON.md  SUPPORTEREMBASSYPROGRAM.md  SUPPORTERFEATUREREQUEST_PIPELINE.md  SUPPORTERFESTIVALCALENDAR.md  SUPPORTERHALLOF_FAME.md  SUPPORTERINNOVATIONLAB.md  SUPPORTERLOREBIBLE.md  (+31 more)
.github/: Add FUNDING.yml
API_Gateway_Endpoints/: DONE.md  Product.yaml  Signed_Payload.json
badge-wall/: README.md  verification.md
community/: Governance.md  Roles.md
docs/: COMPLIANCE.md  SECURITY.md
examples/: create_mint.ts
funding/: Grants.md  README.md  backers.json
governance/: badge-authority-mapping.md  sponsor-benefits.md  sponsorship-policy.md
metrics/: Leaderboard.md  contributors.json
programs/solana-kyc-sdk/: Cargo.toml  Update Cargo.toml
programs/solana-kyc-sdk/src/: Update constants.rs  Update errors.rs  Update lib.rs  Update state.rs  constants.rs  errors.rs  lib.rs  state.rs  transfer_hook.rs
registry/: sponsors.json
scripts/: setup_devnet.sh
sdk/: README.md  Update index.ts  Update transfer-hook-helper.ts  compliance-client.ts  index.ts  (+1 more)
(+9 files in other folders)
