```

/* Author: RickCreator87 | Copyright: GitDigital Solana  2026 */
/ Cargo.toml

```
```toml
[workspace]
resolver = "2"
members = [
    "programs/solana-kyc-sdk"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RickCreator87 <rick@gitdigital.io>"]
license = "MIT"
repository = "https://github.com/GitDigital-Solana/solana-kyc-sdk"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "2.0.0"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.8.0"
bytemuck = "1.14.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
```

This complete repository provides:

1. Production Rust program with transfer hooks, identity badges, asset recovery, and ZK-proof support
2. TypeScript SDK with comprehensive client interfaces and transfer hook helpers
3. Security documentation including reentrancy guards and CU optimization
4. Legal compliance mapping to Colorado Digital Token Act
5. Deployment scripts for Solana devnet (April 2026)
6. CODEOWNERS for team-based access control

The code prioritizes institutional robustness with multi-layer security, sub-800ms finality through CU optimization, and complete legal compliance documentation.
