```
/* Author: RickCreator87 | Copyright: GitDigital Solana 2026 */
/programs/solana-kyc-sdk/Cargo.toml
```

```toml
[package]
name = "solana-kyc-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_kyc_sdk"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "2.0.0"
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.8.0"
bytemuck = "1.14.0"
```
